Updated email template according to connect innovative and also updated copyright year to be dynamic.

--- a/EmailTemplete.html
+++ b/EmailTemplete.html
@@ -48,7 +48,8 @@
                 respond to requests within 48 hours during normal business days.
                 <br />
                 <br />
-                If you would like to learn more about our products / services, please visit our website at www.computingyard.com
+                If you would like to learn more about our products / services, please visit our website at
+                www.computingyard.com
             </p>
         </div>
 
@@ -57,15 +58,20 @@
             <div class="testing" style="margin-top:-30px">
                 <p style="justify-content: center;align-items: center;text-align: center;padding: 21px;">
                     <br />
-                    Copyright © 2020 ComputingYard. All Rights Reserved.
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear())</script> ComputingYard. All Rights Reserved.
                 </p>
             </div>
 
         </div>
         <div class="temp" style="display:flex;margin-left:225px;margin-top:-20px;">
-            <a href="https://www.facebook.com/computingyard"><img src="https://image.flaticon.com/icons/png/512/124/124010.png" style="height:60px;width:60px"></a>
-            &nbsp;<a href="https://www.linkedin.com/company/computingyard/"><img src="https://image.flaticon.com/icons/png/512/174/174857.png" style="height:60px;width:60px"></a>
-            &nbsp;<a href="mailto:info@computingyard.com"><img src="https://icons.iconarchive.com/icons/graphicloads/100-flat/256/email-2-icon.png" style="height:60px;width:60px"></a>
+            <a href="https://www.facebook.com/computingyard"><img
+                    src="https://image.flaticon.com/icons/png/512/124/124010.png" style="height:60px;width:60px"></a>
+            &nbsp;<a href="https://www.linkedin.com/company/computingyard/"><img
+                    src="https://image.flaticon.com/icons/png/512/174/174857.png" style="height:60px;width:60px"></a>
+            &nbsp;<a href="mailto:info@computingyard.com"><img
+                    src="https://icons.iconarchive.com/icons/graphicloads/100-flat/256/email-2-icon.png"
+                    style="height:60px;width:60px"></a>
         </div>
     </div>
 </body>
